# Pico-TMP117-Library

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.cache/clangd/index/: TMP117_Registers.h.68C3B7F8B36204F7.idx  alert_pin.c.D9DCC99D4414739E.idx  alert_smbus.c.24B864697B9DB552.idx  alerts.c.8252A12875E891E4.idx  alerts.c.927285BAF31B0D37.idx  alerts.c.DE431D6C4CACC509.idx  alerts.c.FC5CB667B215A3A9.idx  eeprom.c.B3D08313EBA6032D.idx  example.c.F013F2BAFC4BD8B5.idx  limits.c.C5ED7405DDC72D43.idx  nist.c.9B73038A934470B0.idx  read_registers.c.2F3561BDFD45E177.idx  read_registers.c.FEFF082B9913E877.idx  set_alert_mode_temp_limits.c.8058B11E8E3284DD.idx  set_alert_mode_temp_limits.c.D850B0FF929DED30.idx  set_alert_mode_temp_limits.c.E535BBF332C445B0.idx  set_conversion_avg_cycle.c.14F7C83DB1FBF4E7.idx  set_conversion_mode.c.61B29E965AF738AB.idx  set_conversion_mode.c.A8A1C4658397CC98.idx  set_converstion_avg_cycle.c.BEBB3947B8C4C728.idx  set_offset.c.300B034609DC6458.idx  set_offset.c.92C1D1A0C200CE0F.idx  stateh.c.0488756D90FA368F.idx  temp_celsius_new.c.E93755818103A4F0.idx  temp_result.c.B532D230D01277AD.idx  temp_result.c.C4932BDEB76A50A3.idx  temp_result.c.D42F55B633A3E4A3.idx  temp_result_cycle_time.c.11CA38C9F59B448F.idx  temp_result_os.c.E331E09C08E47C9E.idx  temp_result_os_interrupt.c.A3021D11E0724336.idx  temp_time.c.06DB4439AA25FBCB.idx  test.c.30ECA0F42710A96A.idx  test.c.D2F90912DC67DF7F.idx  test_overflow.c.2F13D7ACC80B3260.idx  tmp117.c.76CFBA0AEAA87C4B.idx  tmp117.h.C93FDC2743F1059E.idx  tmp117_registers.h.25E2621D4C5DABDE.idx
examples/: CMakeLists.txt
examples/0_read_registers/: CMakeLists.txt  read_registers.c
examples/1_temp_result_cc/: CMakeLists.txt  temp_lcd.c  temp_result.c  temp_time.c
examples/2_temp_result_os/: CMakeLists.txt  temp_result_os.c  temp_result_os_interrupt.c
examples/3_set_offset/: CMakeLists.txt  set_offset.c
examples/4_set_conversion_mode/: CMakeLists.txt  set_conversion_mode.c
examples/5_alerts/: CMakeLists.txt  alerts.c  set_alert_mode_temp_limits.c
examples/6_set_conversion_cycle_time/: CMakeLists.txt  set_conversion_avg_cycle.c
examples/7_alert_smbus/: CMakeLists.txt  alert_smbus.c
examples/8_NIST-ID/: CMakeLists.txt  nist.c
examples/9_eeprom/: CMakeLists.txt  eeprom.c
examples/A_temp_lcd/: CMakeLists.txt  temp_lcd.c
src/: CMakeLists.txt  lcd.c  lcd.h  tmp117.c  tmp117.h  tmp117_registers.h
