# Add example subdirectories
add_subdirectory(0_read_registers)
add_subdirectory(1_temp_result_cc)
add_subdirectory(2_temp_result_os)
add_subdirectory(3_set_offset)
add_subdirectory(4_set_conversion_mode)
add_subdirectory(5_alerts)
add_subdirectory(6_set_conversion_cycle_time)
add_subdirectory(7_alert_smbus)
add_subdirectory(8_NIST-ID)
add_subdirectory(9_eeprom)
add_subdirectory(A_temp_lcd)

message(STATUS "END tmp117/examples/CMakeLists.txt")
